--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "rguedes/pdfmerger",
-    "version": "1.0.4",
+    "name": "ianrothmann/pdfmerger",
+    "version": "1.0.5",
     "description": "PDFMerger for PHP",
     "keywords": ["PHP", "PDF"],
     "homepage": "https://github.com/rguedes/PDFMerger",
